updated site files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <html>
-  <body>
-    <h1>Likely Intelligent Machines</h1>
-  </body>
+	<header>
+		<link rel="stylesheet" href="styles/main.css">
+	</header>
+	<body>
+	<div class="container">
+	  <div class="lim-template">
+		  <div class="page">
+				<div class="title">
+					<h1>Likely Intelligent</h1>
+					<h2>Machines</h2>
+					<img src="images/lim-logo-p0.png">
+				</div>
+				<div class="footer">Copyright 2017</div>
+			  </div>
+		  </div>
+	  </div>
+	</body>
 </html>
+
